[package]
name = "smuggle-rs"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.120"
web-sys = { version = "0.3.97", features = ["Document", "HtmlAnchorElement", "HtmlInputElement", "Window"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
